fix aptc calculator

--- a/app/javascript/css/forms.scss
+++ b/app/javascript/css/forms.scss
@@ -371,3 +371,7 @@ input[type='date']:invalid::-webkit-datetime-edit {
     border: none;
   }
 }
+
+#update_tax_credit_section input[type="number"] {
+  width: 100px;
+}
