--- a/app/views/exchanges/hbx_profiles/dry_run_dashboard.html.erb
+++ b/app/views/exchanges/hbx_profiles/dry_run_dashboard.html.erb
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-md-6">
       <h3>
-        <%= l10n("admin_actions.dry_run.renewal_benefit_coverage_values") %>
+        <strong><%= l10n("admin_actions.dry_run.renewal_benefit_coverage_values") %></strong>
       </h3>
       <table class="table table-bordered">
         <thead>
@@ -25,7 +25,7 @@
       </table>
 
       <h3>
-        <%= l10n("admin_actions.dry_run.application_renewal_status") %>
+        <strong><%= l10n("admin_actions.dry_run.application_renewal_status") %></strong>
       </h3>
       <table class="table table-bordered">
         <thead>
@@ -63,12 +63,12 @@
       </table>
 
       <h3>
-        <%= l10n("admin_actions.dry_run.oe_determined_notices") %>
+         <strong><%= l10n("admin_actions.dry_run.oe_determined_notices") %></strong>
       </h3>
-      <h5>
+      <h4>
         <strong><%= l10n("admin_actions.dry_run.notices.note") %></strong>
         <%= l10n("admin_actions.dry_run.notices.note_info") %>
-      </h5>
+      </h4>
       <table class="table table-bordered">
         <thead>
           <tr>
@@ -82,6 +82,44 @@
               <td><%= notice.upcase %></td>
               <td><%= value %></td>
             </tr>
+          <% end %>
+        </tbody>
+      </table>
+
+      <h3>
+        <strong><%= l10n('dry_run_dashboard.enrollment_states') %></strong>
+      </h3>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th><%= l10n('dry_run_dashboard.type') %></th>
+            <th><%= l10n('dry_run_dashboard.category') %></th>
+            <th><%= l10n('dry_run_dashboard.auto_renewing') %></th>
+            <th><%= l10n('dry_run_dashboard.coverage_selected') %></th>
+            <th><%= l10n('dry_run_dashboard.renewing_coverage_selected') %></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% enrollment_states.each do |type, categories| %>
+            <% if type == 'health' %>
+              <% categories.each do |category, values| %>
+                <tr>
+                  <td><%= type.capitalize %></td>
+                  <td><%= category.split('_').map(&:capitalize).join(' ') %></td>
+                  <% values.each_value do |value| %>
+                    <td><%= value%></td>
+                  <% end %>
+                </tr>
+              <% end %>
+            <% else %>
+              <tr>
+                <td><%= type.capitalize %></td>
+                <td>Dental</td>
+                 <% categories.each_value do |value| %>
+                   <td><%= value%></td>
+                 <% end %>
+              </tr>
+            <% end %>
           <% end %>
         </tbody>
       </table>
