plan tile match mockups

--- a/app/javascript/css/_buttons.scss
+++ b/app/javascript/css/_buttons.scss
@@ -143,7 +143,7 @@ button.outline,
   );
 }
 
-.button.secondary.outline {
+.button.secondary.outline, button.secondary.outline, .btn.secondary.outline, .btn-secondary.outline {
   color: var(--secondary-color);
   border-color: var(--secondary-color);
 
