--- a/app/views/insured/families/_enrollment_actions.html.erb
+++ b/app/views/insured/families/_enrollment_actions.html.erb
@@ -15,7 +15,7 @@
       <% key_index = hbx_enrollment.id %>
       <% unless read_only || !can_make_changes_for_enrollment %>
         <div class="dropdown">
-          <button class="btn btn-default dropdown-toggle interaction-click-control-actions button outline " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button class="btn btn-default dropdown-toggle interaction-click-control-actions button outline secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= l10n("actions")%>
             <span class="caret"></span>
           </button>
