--- a/app/views/insured/families/_enrollment_refactored.html.erb
+++ b/app/views/insured/families/_enrollment_refactored.html.erb
@@ -6,8 +6,8 @@
   <%= render partial: 'insured/families/waived_coverage_widget', locals: { read_only: read_only || hbx_enrollment.can_make_changes?, hbx_enrollment: hbx_enrollment } %>
 <% else %>
   <% if @bs4 %>
-    <div class="hbx-enrollment-refactored-panel plan-card plan-row border my-2 rounded-lg <%= "initially_hidden_enrollment hidden" if initially_hide_enrollment?(hbx_enrollment) %>">
-      <div class="panel-header p-2 d-flex justify-content-between">
+    <div class="hbx-enrollment-refactored-panel plan-card plan-row border my-2 <%= "initially_hidden_enrollment hidden" if initially_hide_enrollment?(hbx_enrollment) %>">
+      <div class="panel-header py-2 px-3 d-flex justify-content-between">
         <div class="plan-type">
           <% if product.kind.to_s == "dental" %>
             <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -20,17 +20,17 @@
               <path d="M10 3.25C9.0335 3.25 8.25 4.0335 8.25 5V8.25H5C4.0335 8.25 3.25 9.0335 3.25 10V14C3.25 14.9665 4.0335 15.75 5 15.75H8.25V19C8.25 19.9665 9.0335 20.75 10 20.75H14C14.9665 20.75 15.75 19.9665 15.75 19V15.75H19C19.9665 15.75 20.75 14.9665 20.75 14V10C20.75 9.0335 19.9665 8.25 19 8.25H15.75V5C15.75 4.0335 14.9665 3.25 14 3.25H10Z" fill="currentColor"/>
             </svg>
           <% end %>
-          <span><%= product.kind.to_s.titleize %></span>
+          <span class="pl-1"><%= product.kind.to_s.titleize %></span>
         </div>
         <div class="plan-status-container"><%= render partial: "insured/families/enrollment_status_label", locals: { step: hbx_enrollment.enroll_step, hbx_enrollment: hbx_enrollment } %></div>
       </div>
 
-      <div class="panel-body bg-white p-2">
+      <div class="panel-body bg-white py-2 px-3">
         <div class="d-flex">
-          <div class="col-md-2 col-sm-2 align-self-center"><%= display_carrier_logo(Maybe.new(product), {width: 100}) %></div>
+          <div class="col-md-2 col-sm-2 align-self-center pl-0"><%= display_carrier_logo(Maybe.new(product), {width: 100}) %></div>
           <div class="col-md-8">
             <h3 class="no-buffer">
-              <%= h(link_to product.title, summary_products_plans_path({plan_id: product.id, :standard_component_id => product.hios_id, hbx_enrollment_id: hbx_enrollment.id, market_kind: hbx_enrollment.market_name&.downcase, coverage_kind: hbx_enrollment.coverage_kind, active_year: product.active_year, bs4: @bs4}), remote: action_name != "home") %>
+              <%= h(link_to product.title, summary_products_plans_path({plan_id: product.id, :standard_component_id => product.hios_id, hbx_enrollment_id: hbx_enrollment.id, market_kind: hbx_enrollment.market_name&.downcase, coverage_kind: hbx_enrollment.coverage_kind, active_year: product.active_year, bs4: @bs4}), remote: action_name != "home", class:"default-text") %>
             </h3>
           </div>
         </div>
@@ -72,7 +72,7 @@
             <dd><span class="badge badge-pill badge-lg badge-<%= plan_level.downcase %>"><%= plan_level %></span></dd>
           </dl>
           <dl class="parent col-6 pl-0">
-            <dt class="plan-id"><%= HbxProfile::ShortName %> <%= l10n("enrollment_id") %>:</dt>
+            <dt class="plan-id"><%= l10n("enrollment_id") %>:</dt>
             <dd><%= hbx_enrollment.hbx_id %></dd>
             <dt class="enrollment-premium"><%= l10n("premium_you_pay") %>:</dt>
             <dd><%= number_to_currency(current_premium(hbx_enrollment), precision: 2) %> / <%= l10n("month").to_s.downcase %></dd>
