--- a/app/views/insured/plan_shoppings/_plan_details.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_details.html.erb
@@ -7,7 +7,7 @@
     <% premium = plan.total_employee_cost - plan.total_childcare_subsidy_amount %>
   <% end %>
 
-  <div class="plan-card plan-row border my-2  rounded-lg"
+  <div class="plan-shopping-refactored-panel plan-card plan-row border my-2"
     data-plan-id="<%= plan.id %>"
     data-plan-category="<%= plan.product_type ? plan.product_type.downcase : '' %>"
     data-plan-metal-level="<%= plan.metal_level.downcase %>"
@@ -22,7 +22,7 @@
     data-plan-osse-eligibility="<%= osse_status(plan) %>"
     data-plan-ehb="<%= plan.ehb %>"
     data-can-use-aptc="<%= plan.can_use_aptc? %>">
-    <div class="panel-header p-2 d-flex justify-content-between">
+    <div class="panel-header pt-2 px-3 d-flex justify-content-between">
       <div class="pl-0 col-3">
         <% if details_page %>
           <div class="plan-type">
@@ -37,7 +37,7 @@
                 <path d="M10 3.25C9.0335 3.25 8.25 4.0335 8.25 5V8.25H5C4.0335 8.25 3.25 9.0335 3.25 10V14C3.25 14.9665 4.0335 15.75 5 15.75H8.25V19C8.25 19.9665 9.0335 20.75 10 20.75H14C14.9665 20.75 15.75 19.9665 15.75 19V15.75H19C19.9665 15.75 20.75 14.9665 20.75 14V10C20.75 9.0335 19.9665 8.25 19 8.25H15.75V5C15.75 4.0335 14.9665 3.25 14 3.25H10Z" fill="currentColor"/>
               </svg>
             <% end %>
-            <span><%= plan.kind.to_s.titleize %></span>
+            <span class="pl-1"><%= plan.kind.to_s.titleize %></span>
           </div>
         <% else %>
           <label for="compare_plan_checkbox_<%= plan.id %>" data-cuke="compare_plan_checkbox" class="weight-n d-flex align-items-center">
@@ -47,19 +47,9 @@
         <% end %>
       </div>
       <div>
-        <div class="d-flex justify-content-between mb-3">
-          <% if plan.try(:is_standard_plan) %>
-            <span tabindex="0" compare_plans class="badge badge-pill badge-lg badge-standard d-flex align-items-center" data-toggle="tooltip" data-placement="top" data-container="body" title= "<%=l10n('insured.plan_shoppings.standard_plan_title_info') %>">
-              <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" class="mr-2">
-                <title>Checkmark</title>
-                <circle cx="10" cy="10" r="9" stroke="currentColor" stroke-width="2"/>
-                <path d="M14 7L8.46154 13L6 10.3333" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
-              <%= plan.standard_plan_label.titleize %>
-            </span>
-          <% end %>
+        <div class="d-flex justify-content-between">
           <% if @person.primary_family.enrolled_hbx_enrollments.map(&:product).map(&:id).include?(plan.id) %>
-            <span class="badge badge-pill badge-lg badge-current-plan ml-2 d-flex align-items-center">
+            <span class="badge badge-pill badge-lg badge-current-plan d-flex align-items-center">
               <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <title>Star</title>
                 <g clip-path="url(#clip0_4990_3099)" class="mr-2">
@@ -74,15 +64,25 @@
               <%= l10n("your_current_plan", year: plan.try(:active_year)) %>
             </span>
           <% end %>
+          <% if plan.try(:is_standard_plan) %>
+            <span tabindex="0" compare_plans class="ml-2 badge badge-pill badge-lg badge-standard d-flex align-items-center" data-toggle="tooltip" data-placement="top" data-container="body" title= "<%=l10n('insured.plan_shoppings.standard_plan_title_info') %>">
+              <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" class="mr-2">
+                <title>Checkmark</title>
+                <circle cx="10" cy="10" r="9" stroke="currentColor" stroke-width="2"/>
+                <path d="M14 7L8.46154 13L6 10.3333" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+              <%= plan.standard_plan_label.titleize %>
+            </span>
+          <% end %>
         </div>
       </div>
     </div>
-    <div class="panel-body bg-white p-2">
+    <div class="panel-body bg-white py-2 px-3">
       <div class="d-flex align-items-start">
-        <div class="col-md-2 col-sm-2"><%= display_carrier_logo(Maybe.new(plan), {width: 100}) %></div>
+        <div class="col-md-2 col-sm-2 pl-0"><%= display_carrier_logo(Maybe.new(plan), {width: 100}) %></div>
         <div class="col-md-8">
           <h3 class="no-buffer">
-            <%= link_to summary_products_plans_path({plan_id: plan.id, :standard_component_id => plan.hios_id, hbx_enrollment_id: @hbx_enrollment.id, market_kind: @market_kind, coverage_kind: @coverage_kind, enrollment_kind: @enrollment_kind, active_year: plan.try(:active_year), bs4: @bs4}), {:remote => true} do %>
+            <%= link_to summary_products_plans_path({plan_id: plan.id, :standard_component_id => plan.hios_id, hbx_enrollment_id: @hbx_enrollment.id, market_kind: @market_kind, coverage_kind: @coverage_kind, enrollment_kind: @enrollment_kind, active_year: plan.try(:active_year), bs4: @bs4}), {:remote => true, class: "default-text"} do %>
               <% if plan.is_csr?%>
                 <span tabindex="0" class="far fa-check-square" title="Eligible for Cost Sharing Reduction" data-toggle="tooltip"></span>
               <% end %>
