--- a/app/views/insured/group_selection/_change_tax_credit_form.html.erb
+++ b/app/views/insured/group_selection/_change_tax_credit_form.html.erb
@@ -45,7 +45,7 @@
         </div>
         <p class="d-flex">
           <label for="new_enrollment_premium" class="mr-1"> <%= l10n("new_monthly_premium") %></label>
-          <span id="calculated_amount_applied"><%= locals[:hbx_enrollment].total_premium.to_f - (locals[:available_aptc].to_f * locals[:hbx_enrollment].elected_aptc_pct.to_f) %></span>
+          <span id="calculated_amount_applied"><%= number_to_currency(locals[:hbx_enrollment].total_premium.to_f - (locals[:available_aptc].to_f * locals[:hbx_enrollment].elected_aptc_pct.to_f)) %></span>
         </p>
         <div class="mt-4">
           <%= button_tag l10n("discard_changes"), class: "btn outline mr-2", id: "btn-discard-tax-credit", disabled: false, type: :reset %>
@@ -82,7 +82,7 @@
       }
 
       function handlePercentageInput() {
-        const percentageValue = parseFloat(updateTaxCreditPercentage.value);
+        const percentageValue = updateTaxCreditPercentage.value ? parseFloat(updateTaxCreditPercentage.value) : 0;
         if (!isNaN(percentageValue)) {
           if (percentageValue > 100) {
             updateTaxCreditPercentage.value = 100;
@@ -104,7 +104,7 @@
       }
 
       function handleTotalInput() {
-        const totalValue = parseFloat(aptcAppliedTotal.value);
+        const totalValue = aptcAppliedTotal.value ? parseFloat(aptcAppliedTotal.value) : 0;
         if (totalValue > maxTaxCredit) {
           updateTaxCreditPercentage.value = 100;
           aptcAppliedTotal.value = maxTaxCredit;
